Updates to add portal settings
